Added autodownloading Messages.json